[package]
name = "pLibra"
version = "0.1.0"
authors = ["liwei <luswar@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
anyhow = "1.0.32"
reqwest = { version = "0.10.7", features = ["blocking", "json"], default_features = false }
serde = { version = "1.0.116", default-features = false }
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["macros"] }
rand = "0.7.3"
rustyline = "6.3.0"

libra-json-rpc-client = { path = "./json-rpc/client", version = "0.1.0" }
libra-json-rpc-types  = { path = "./json-rpc/types" }
#verify = { path = "./verify", version = "0.1.0"}
lcs = { path = "./common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-types = {path = "./types", version = "0.1.0" }
libra-client = {path = "./client/libra-client", version = "0.1.0"}
swiss-knife = {path = "./client/swiss-knife", version = "0.1.0"}
libra-crypto = { path = "./crypto/crypto", version = "0.1.0" }
libra-logger =  { path = "./common/logger", version = "0.1.0" }
