[package]
name = "pdiem"
version = "0.1.0"
authors = ["goldenfiredo <goldenfiredo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
anyhow = "1.0.32"
reqwest = { version = "0.10.7", features = ["blocking", "json"], default_features = false }
serde = { version = "1.0.116", default-features = false }
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7.3"
rustyline = "6.3.0"

bcs = "0.1.2"
diem-json-rpc-client = { path = "./json-rpc/client", version = "0.1.0" }
diem-json-rpc-types  = { path = "./json-rpc/types" }
diem-types = {path = "./types", version = "0.1.0" }
diem-client = {path = "./client/diem-client", version = "0.1.0"}
swiss-knife = {path = "./client/swiss-knife", version = "0.1.0"}
diem-crypto = { path = "./crypto/crypto", version = "0.1.0" }
diem-logger =  { path = "./common/logger", version = "0.1.0" }

structopt = { version = "0.3" }
hyper = { version = "0.13" }
bytes = "0.5"
base64 = "0.11"