[package]
name = "json-rpc"
version = "0.1.0"
authors = ["liwei <luswar@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
hex = "0.4.2"
reqwest = { version = "0.10.8", features = ["blocking", "json"], default_features = false }
serde = { version = "1.0.115", default-features = false }
serde_json = "1.0.57"
