[package]
name = "verify"
version = "0.1.0"
authors = ["liwei <luswar@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
hex = "0.4.2"
serde = { version = "1.0.115", default-features = false }
serde_json = "1.0.57"

lcs = { path = "./../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-crypto = { path = "./../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }
libra-crypto-derive = { path = "./../crypto/crypto-derive", version = "0.1.0" }
types = {path = "./../types", version = "0.1.0" }
