[package]
name = "swiss-knife"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Tool for generating, serializing (LCS), hashing and signing Diem transactions. Additionally, contains tools for testing"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.17"
rand = "0.8.3"
hex = "0.4.3"
serde_json = "1.0.64"
serde = { version = "1.0.116", features = ["derive"] }
bcs = "0.1.2"

diem-types = { path = "../../types", version = "0.0.1" }
diem-crypto = { path = "../../crypto/crypto", version = "0.0.1" }
move-core-types = { path = "../../language/move-core/types", version = "0.0.1" }
transaction-builder = { path = "../../language/transaction-builder", version = "0.1.0" }
