[package]
name = "diem-logger"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem diem-logger"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the libra-logger crate.
[dependencies]
chrono = "0.4.18"
erased-serde = "0.3.12"
hex = "0.4.2"
diem-log-derive = { path = "derive", version = "0.1.0" }
diem-time = { path = "../time", version = "0.1.0" }
once_cell = "1.4.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
prometheus = { version = "0.10.0", default-features = false }
