[package]
name = "diem-json-rpc-client"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem JSONRPC client"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.32"
hex = "0.4.2"
reqwest = { version = "0.10.8", features = ["blocking", "json"], default_features = false }
serde = { version = "1.0.116", default-features = false }
serde_json = "1.0.57"

bcs = "0.1.2"
diem-json-rpc-types  = { path = "../../json-rpc/types" }
diem-types = { path = "../../types", version = "0.1.0" }

[features]
default = ["tls"]
tls = ["reqwest/native-tls"]
