[package]
name = "move-explain"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Move abort code explanations"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
structopt = "0.3.18"
anyhow = "1.0.32"
log = "0.4.11"

# compiled-stdlib = { path = "../../stdlib/compiled", version = "0.1.0" }
# errmapgen = { path = "../../move-prover/errmapgen", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.0.1" }
bcs = "0.1.2"

[features]
default = []
